sections gap fixed

--- a/client/src/app/components/Main/components/AboutMe/AboutMe.scss
+++ b/client/src/app/components/Main/components/AboutMe/AboutMe.scss
@@ -6,5 +6,6 @@
   @include media-query($media-md) {
     @include display-flex(column);
     background-image: url("/background/second-background-675x900.svg");
+    margin-top: -5px;
   }
 }
